# octopets

./: .gitignore  NuGet.config  README.md  azure.yaml  octopets.sln
.aspire/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md
.specify/memory/: constitution.md
agent/: Dockerfile  agent.py  pyproject.toml
apphost/: AppHost.cs  Octopets.AppHost.csproj  apphost.run.json  appsettings.json
aspire-output/: main.bicep
aspire-output/api/: api.bicep
aspire-output/frontend/: frontend.bicep
aspire-output/octopets-aca/: octopets-aca.bicep
aspire-output/octopets-appinsights/: octopets-appinsights.bicep
aspire-output/octopetsacr/: octopetsacr.bicep
aspire-output/orchestrator-agent/: orchestrator-agent.bicep
aspire-output/python-agent-chat/: python-agent-chat.bicep
aspire-output/python-agent-sitter/: python-agent-sitter.bicep
backend/: Program.cs
data/: listing.json
docs/: multi-agent-orchestration.md
docs/issues/: update-agent-framework-to-public-preview.md
docs/issues/phase-1/: QUICKSTART.md  README.md  SUMMARY.md  T002-create-backend-model-files-group1.md  T003-create-backend-model-files-group2.md  T004-create-repository-interface-files.md  T005-review-authentication-patterns.md  create-issues.sh
frontend/: .gitignore  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  exports.ts  index.css
frontend/src/components/: AgentChat.tsx  FloatingChatWidget.tsx  Footer.tsx  ListingCard.tsx  MarkdownMessage.tsx  Navbar.tsx  PetPolaroid.tsx  RadarSection.tsx
frontend/src/config/: appConfig.ts
frontend/src/data/: agentService.ts  constants.ts  constantsJsx.tsx  listingsData.ts
frontend/src/pages/: Home.tsx  ListingDetails.tsx  Listings.tsx
frontend/src/styles/: AgentChat.css  Button.css  FloatingChatWidget.css  Footer.css  Home.css  ListingCard.css  ListingDetails.css  Listings.css  Navbar.css  PetPolaroid.css  RadarSection.css  variables.css
frontend/src/types/: types.ts
frontend/tests/playwright-report/trace/assets/: defaultSettingsView-DkkRvn5X.js
orchestrator-agent/: Dockerfile  README.md  app.py  orchestrator.py  pyproject.toml
servicedefaults/: Octopets.ServiceDefaults.csproj
sitter-agent/: Dockerfile  README.md  app.py  pet_sitter_agent.py  pyproject.toml  start.sh
sitter-agent/data/: pet-sitter.json
specs/001-pet-sitter-marketplace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pet-sitter-marketplace/checklists/: requirements.md
specs/001-pet-sitter-marketplace/contracts/: pet-owner-api.yaml
specs/002-pet-sitter-marketplace2/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-pet-sitter-marketplace2/checklists/: requirements.md
specs/002-pet-sitter-marketplace2/contracts/: api-spec.yaml
